WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289243
REGRESSION(
289946@main
) [Cocoa] Navigation to empty URL should not be rejected
https://bugs.webkit.org/show_bug.cgi?id=289243
Summary
REGRESSION(289946@main) [Cocoa] Navigation to empty URL should not be rejected
Vitaly Dyackhov
Reported
2025-03-06 07:12:39 PST
Currently, in `WebPageProxy::loadRequestWithNavigationShared()` we reject navigation to non-null invalid URL. This condition also includes empty URL, which can be replaced with "about:blank" in `DocumentLoader::maybeLoadEmpty()`.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2025-03-06 08:13:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/42004
EWS
Comment 2
2025-03-06 12:33:14 PST
Committed
291723@main
(7147bc7fd835): <
https://commits.webkit.org/291723@main
> Reviewed commits have been landed. Closing PR #42004 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-06 12:34:14 PST
<
rdar://problem/146413478
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug