REGRESSION(289946@main) [Cocoa] Navigation to empty URL should not be rejected https://bugs.webkit.org/show_bug.cgi?id=289243

Reviewed by Chris Dumez.

Currently, in `WebPageProxy::loadRequestWithNavigationShared()`
we reject navigation to non-null invalid URL.

This condition also includes empty URL, which can be replaced
with "about:blank" in `DocumentLoader::maybeLoadEmpty()`.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadRequestWithNavigationShared):
* Tools/TestWebKitAPI/CMakeLists.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKit/PageLoadEmptyURL.cpp: Added.
(TestWebKitAPI::State::State):
(TestWebKitAPI::didStartProvisionalNavigation):
(TestWebKitAPI::didCommitNavigation):
(TestWebKitAPI::didFinishNavigation):
(TestWebKitAPI::TEST(WebKit, PageLoadEmptyURL)):

Canonical link: https://commits.webkit.org/291723@main